- Fixed a crash when someone with the HUD tries to join you mid-heist.
- Added Russian localization