@@ -1,2 +1,3 @@
 - Fixed a crash when someone with the HUD tries to join you mid-heist.
-- Added Russian localization
+- Added Russian localization.
+- Added the Wave panel (safe house raid)
